# Infantry

./: CMakeLists.txt  README.md  步兵硬件检查指南.docx
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_cortex.c
Inc/: FreeRTOSConfig.h  main.h  usbd_cdc_if.h
MDK-ARM/: JLinkLog.txt  standard_robot.uvguix.宸汐Mi-ose  standard_robot.uvoptx  standard_robot.uvprojx  startup_stm32f407xx.lst  startup_stm32f407xx.s
MDK-ARM/standard_board_c/: adc.crf  adc.d  ahrs_middleware.crf  ahrs_middleware.d  bmi088driver.crf  bmi088driver.d  bmi088middleware.crf  bmi088middleware.d  bsp_adc.crf  bsp_adc.d  bsp_buzzer.crf  bsp_buzzer.d  bsp_can.crf  bsp_can.d  bsp_crc32.crf  bsp_crc32.d  bsp_delay.crf  bsp_delay.d  bsp_flash.crf  bsp_flash.d  bsp_fric.crf  bsp_fric.d  bsp_i2c.crf  bsp_i2c.d  bsp_imu_pwm.crf  bsp_imu_pwm.d  bsp_laser.crf  bsp_laser.d  bsp_led.crf  bsp_led.d  bsp_rc.crf  bsp_rc.d  bsp_rng.crf  bsp_rng.d  bsp_servo_pwm.crf  bsp_servo_pwm.d  bsp_spi.crf  bsp_spi.d  bsp_usart.crf  bsp_usart.d  (+196 more)
Src/: can.c  freertos.c  main.c  stm32f4xx_it.c  tim.c  usbd_cdc_if.c
application/: CAN_receive.c  CAN_receive.h  INS_task.c  RM_Cilent_UI.c  RM_Cilent_UI.h  UI_ProgressBar.c  UI_ProgressBar.h  UI_SavingLabel.c  UI_SavingLabel.h  UI_car.c  UI_car.h  UI_label.c  UI_label.h  User_Task.h  calibrate_task.c  chassis_behaviour.c  chassis_behaviour.h  chassis_power_control.c  chassis_task.c  chassis_task.h  detect_task.c  detect_task.h  gimbal_behaviour.c  gimbal_behaviour.h  gimbal_task.c  gimbal_task.h  referee.c  referee.h  referee_send.c  remote_control.c  remote_control.h  serial.c  serial.h  servo_task.c  servo_task.h  shoot.c  shoot.h  struct_typedef.h  test_task.c  test_task.h  (+5 more)
bsp/boards/: bsp_fric.h  bsp_servo_pwm.c  bsp_servo_pwm.h
components/algorithm/: kalman_filter.h
components/devices/: OLED.c
